Update 110.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
@@ -1018,12 +1018,12 @@ ADMINS  SERVERS=WEB_SERVER_STATUS
 **4. Заполните следующую таблицу с помощью соответствующей сетевой утилиты:**  
 | **Действие** | **Команда(ы)** |
 |:-------------|:---------------|
-| Показать сетевые файлы для хоста `192.168.1.55` на порту `22` с помощью `lsof`. |  |
-| Показать процессы, получающие доступ к порту по умолчанию веб-сервера Apache на вашем компьютере с помощью `fuser`. |  |
-| Выведите список всех прослушивающих сокетов *udp* на вашем компьютере с помощью `netstat`. |  |
-| Сканируйте порты с `80` по `443` на хосте `192.168.1.55` с помощью `nmap`. |  |
+| Показать сетевые файлы для хоста `192.168.1.55` на порту `22` с помощью `lsof`. | `lsof -i@192.168.1.55:22` |
+| Показать процессы, получающие доступ к порту по умолчанию веб-сервера Apache на вашем компьютере с помощью `fuser`. | `fuser -vn tcp 80`, `fuser --verbose --namespace tcp 80` |
+| Выведите список всех прослушивающих сокетов *udp* на вашем компьютере с помощью `netstat`. | `netstat -lu`, `netstat --listening --udp` |
+| Сканируйте порты с `80` по `443` на хосте `192.168.1.55` с помощью `nmap`. | `nmap -p 80-443 192.168.1.55` |
 
-**5. Выполните следующие задачи, касающиеся размера *резидентного набора (RSS)* и `ulimit` как обычный пользователь:**  
+**5. Выполните следующие задачи, касающиеся *размера резидентного набора (RSS)* и `ulimit` как обычный пользователь:**  
 * Отобразить *мягкие* ограничения по *максимальному RSS*: 
 * Отобразите *жесткие* ограничения на *максимальный RSS*: 
 * Установите *мягкие* ограничения на *максимальный RSS* до 5000 килобайт: 
