Update 110.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
@@ -1025,9 +1025,15 @@ ADMINS  SERVERS=WEB_SERVER_STATUS
 
 **5. Выполните следующие задачи, касающиеся *размера резидентного набора (RSS)* и `ulimit` как обычный пользователь:**  
 * Отобразить *мягкие* ограничения по *максимальному RSS*: 
+`ulimit -Sm`
+
 * Отобразите *жесткие* ограничения на *максимальный RSS*: 
+`ulimit -Hm`
+
 * Установите *мягкие* ограничения на *максимальный RSS* до 5000 килобайт: 
+
 * Установите *жесткие* ограничения на *максимальный RSS* до 10 000 килобайт: 
+
 * Наконец, попробуйте увеличить *жесткое* ограничение на *максимальный RSS* до 15 000 килобайт. Ты можешь сделать это? Почему?
 
 **6. Рассмотрите следующую `last` строку вывода команды и ответьте на вопросы:**  
