Update 110.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
@@ -1025,24 +1025,32 @@ ADMINS  SERVERS=WEB_SERVER_STATUS
 
 **5. Выполните следующие задачи, касающиеся *размера резидентного набора (RSS)* и `ulimit` как обычный пользователь:**  
 * Отобразить *мягкие* ограничения по *максимальному RSS*: 
-`ulimit -Sm`
+`ulimit -m`, `ulimit -Sm`
 
 * Отобразите *жесткие* ограничения на *максимальный RSS*: 
 `ulimit -Hm`
 
 * Установите *мягкие* ограничения на *максимальный RSS* до 5000 килобайт: 
+`ulimit -Sm 5000`
 
 * Установите *жесткие* ограничения на *максимальный RSS* до 10 000 килобайт: 
+`ulimit -Hm 10000`
 
 * Наконец, попробуйте увеличить *жесткое* ограничение на *максимальный RSS* до 15 000 килобайт. Ты можешь сделать это? Почему?
+Нет. После установки обычные пользователи не могут увеличивать жесткие ограничения.
 
 **6. Рассмотрите следующую `last` строку вывода команды и ответьте на вопросы:**  
 ```console
 carol    pts/0        192.168.1.4      Sun May 31 14:16 - 14:22  (00:06)
 ```
 * `carol` была подключена с удаленного хоста? Почему?
+Да, IP-адрес удаленного хоста находится в третьем столбце.
+
 *  Как долго длилась сессия `carol`? 
+Шесть минут (как показано в последнем столбце).
+
 *  Была ли `carol` подключена через настоящий классический текстовый терминал? Почему?
+Нет, `pts/0` во втором столбце означает, что соединение было выполнено через графический эмулятор терминала (он же *Pseudo Terminal Slave*).
 
 **7. Рассмотрите следующий отрывок из `/etc/sudoers` и ответьте на вопрос ниже.**
 ```console
@@ -1069,7 +1077,8 @@ ADMINS  SERVERS=WEB_SERVER_STATUS
 # Allow members of group sudo to execute any command
 %sudo   ALL=(ALL:ALL) ALL
 ```
-Может ли `alex` проверить статус веб-сервера Apache на любом хосте? Почему?
+**Может ли `alex` проверить статус веб-сервера Apache на любом хосте? Почему?**  
+Нет, поскольку он является членом `REGULAR_USERS` и эта группа пользователей исключена из `ADMINS`; единственные пользователи (кроме `carol`, членов группы `sudo` и `root`), которые могут запускать `systemctl status apache2` на `SERVERS`.
 
 
 ## Ответы на упражнения для размышления
