Update 110.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
@@ -1082,3 +1082,22 @@ ADMINS  SERVERS=WEB_SERVER_STATUS
 
 
 ## Ответы на упражнения для размышления
+
+**1. Помимо SUID и SGID, есть третье специальное разрешение: *sticky bit*. В настоящее время он в основном используется в таких каталогах, как `/tmp`, чтобы обычные пользователи не могли удалять или перемещать файлы, кроме их собственных. Выполните следующие задачи:** 
+* Установите *липкий бит* на `~/temporal`: 
+`chmod +t temporal`, `chmod 1755 temporal`
+
+* Найдите каталоги с *липким битом* (и любыми другими разрешениями), установленным в вашем домашнем каталоге: 
+`find ~ -perm -1000`, `find ~ -perm /1000`
+
+* Отключите *липкий бит* на `~/temporal`: 
+`chmod -t temporal`, `chmod 0755 temporal`
+
+**2. Когда пароль пользователя заблокирован с помощью `passwd -l username` или `usermod -L username`, как вы можете определить это, заглянув в `/etc/shadow`?** 
+Во втором поле сразу после имени входа затронутого пользователя появится восклицательный знак (например: `mary:!$6$gOg9xJgv…`).
+
+**3. Что является эквивалентом команды `usermod` для имени пользователя `chage -E date username` или `chage --expiredate date username`?** 
+`usermod -e date username`, `usermod --expiredate date username`
+
+**4. Предоставьте две разные команды `nmap` для сканирования всех портов 65535 на локальном хосте:**
+`nmap -p 1-65535 localhost` и `nmap -p- localhost`
