Update 110.3 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
@@ -220,3 +220,189 @@ halof:~ # tree /etc/ssh
 префикс `ssh_host_` + *алгоритм* + `key.pub` суффикс (например: `ssh_host_rsa_key.pub`)
 
 >Отпечаток пальца создается путем применения криптографической хеш-функции к открытому ключу. Поскольку отпечатки пальцев короче ключей, к которым они относятся, они пригодятся для упрощения определенных задач управления ключами.
+
+Права на файлы, содержащие закрытые ключи: `0600` или `-rw-------`: только для чтения и записи владельцем (`root`). С другой стороны, все файлы открытых ключей также доступны для чтения членам группы владельцев и всем остальным (`0644` или `-rw-r--r--`):
+
+```console
+halof:~ # ls -l /etc/ssh/ssh_host_*
+-rw------- 1 root root 1381 Dec 21 20:35 /etc/ssh/ssh_host_dsa_key
+-rw-r--r-- 1 root root  605 Dec 21 20:35 /etc/ssh/ssh_host_dsa_key.pub
+-rw------- 1 root root  505 Dec 21 20:35 /etc/ssh/ssh_host_ecdsa_key
+-rw-r--r-- 1 root root  177 Dec 21 20:35 /etc/ssh/ssh_host_ecdsa_key.pub
+-rw------- 1 root root  411 Dec 21 20:35 /etc/ssh/ssh_host_ed25519_key
+-rw-r--r-- 1 root root   97 Dec 21 20:35 /etc/ssh/ssh_host_ed25519_key.pub
+-rw------- 1 root root 1823 Dec 21 20:35 /etc/ssh/ssh_host_rsa_key
+-rw-r--r-- 1 root root  397 Dec 21 20:35 /etc/ssh/ssh_host_rsa_key.pub
+```
+
+Вы можете просмотреть отпечатки ключей, передав `ssh-keygen` ключ `-l`. Вы также должны указать `-f`, чтобы указать путь к ключевому файлу:
+
+```console
+halof:~ # ssh-keygen -l -f /etc/ssh/ssh_host_ed25519_key
+256 SHA256:8cnPrinC49ZHc+/9Ai5pV+1JfZ4WBRZhd3rDOsc2zlA root@halof (ED25519)
+halof:~ # ssh-keygen -l -f /etc/ssh/ssh_host_ed25519_key.pub
+256 SHA256:8cnPrinC49ZHc+/9Ai5pV+1JfZ4WBRZhd3rDOsc2zlA root@halof (ED25519)
+```
+
+Чтобы просмотреть отпечаток ключа, а также его случайное изображение, просто добавьте переключатель `-v` следующим образом:
+
+```console
+halof:~ # ssh-keygen -lv -f /etc/ssh/ssh_host_ed25519_key.pub
+256 SHA256:8cnPrinC49ZHc+/9Ai5pV+1JfZ4WBRZhd3rDOsc2zlA root@halof (ED25519)
++--[ED25519 256]--+
+|              +oo|
+|             .+o.|
+|        .    ..E.|
+|         + .  +.o|
+|        S +  + *o|
+|          ooo Oo=|
+|     . . . =o+.==|
+|      = o =oo o=o|
+|     o.o +o+..o.+|
++----[SHA256]-----+
+```
+
+
+## Туннели портов SSH
+
+OpenSSH имеет очень мощное средство пересылки, с помощью которого трафик на исходном порте туннелируется и шифруется через процесс SSH, который затем перенаправляет его на порт на целевом хосте. Этот механизм известен как туннелирование портов или перенаправление портов и имеет следующие важные преимущества: 
+* Он позволяет обходить брандмауэры для доступа к портам на удаленных хостах. 
+* Это позволяет получить доступ извне к хосту в вашей частной сети. 
+* Он обеспечивает шифрование для всего обмена данными. 
+
+Грубо говоря, мы можем различать локальное и удаленное туннелирование портов.
+
+
+## Туннель местного порта
+
+Вы определяете порт локально для перенаправления трафика на целевой хост через процесс SSH, который находится между ними. Процесс SSH может выполняться на локальном хосте или на удаленном сервере. Например, если по какой-то причине вы хотите туннелировать соединение с `www.gnu.org` через SSH, используя порт `8585` на вашем локальном компьютере, вы должны сделать что-то вроде этого:
+
+```console
+carol@debian:~$ ssh -L 8585:www.gnu.org:80 debian
+carol@debian's password:
+Linux debian 4.19.0-9-amd64 #1 SMP Debian 4.19.118-2 (2020-04-29) x86_64
+
+The programs included with the Debian GNU/Linux system are free software;
+(...)
+Last login: Sun Jun 28 13:47:27 2020 from 127.0.0.1
+```
+
+Объяснение таково: с помощью параметра `-L` мы указываем локальный порт `8585` для подключения к *http*-порту `80` на `www.gnu.org` с помощью процесса SSH, запущенного на `debian` - нашем *локальном хосте*. Мы могли бы написать `ssh -L 8585: www.gnu.org: 80 localhost` с тем же эффектом. Если вы теперь используете веб-браузер для перехода на `http://localhost:8585`, вы будете перенаправлены на `www.gnu.org`. В демонстрационных целях мы будем использовать `lynx` (классический текстовый браузер):
+
+```console
+carol@debian:~$ lynx http://localhost:8585
+(...)
+  * Back to Savannah Homepage
+     * Not Logged in
+     * Login
+     * New User
+     * This Page
+     * Language
+     * Clean Reload
+     * Printer Version
+     * Search
+     * _
+(...)
+```
+
+Если бы вы хотели сделать то же самое, но подключиться через процесс SSH, запущенный на `halof`, вы бы поступили так:
+
+```console
+carol@debian:~$ ssh -L 8585:www.gnu.org:80 -Nf ina@192.168.1.77
+Enter passphrase for key '/home/carol/.ssh/id_ecdsa':
+carol@debian:~$
+carol@debian:~$ lynx http://localhost:8585
+(...)
+  * Back to Savannah Homepage
+     * Not Logged in
+     * Login
+     * New User
+     * This Page
+     * Language
+     * Clean Reload
+     * Printer Version
+     * Search
+     * _
+(...)
+```
+
+Важно отметить в команде три детали: 
+* Благодаря опции `-N` мы не входили в `halof`, а вместо этого выполняли переадресацию портов. 
+* Параметр `-f` указывает SSH работать в фоновом режиме. 
+* Мы указали пользователя `ina` для пересылки: `ina@192.168.1.77`
+
+
+## Туннель удаленного порта
+
+При туннелировании удаленных портов (или обратном перенаправлении портов) трафик, поступающий на порт на удаленном сервере, перенаправляется процессу SSH, запущенному на вашем локальном хосте, а оттуда - на указанный порт на целевом сервере (который также может быть вашей локальной машиной). Например, предположим, что вы хотите разрешить кому-либо извне вашей сети доступ к веб-серверу Apache, работающему на вашем локальном хосте, через порт `8585` сервера SSH, работающего на `halof` (`192.168.1.77`). Вы должны выполнить следующую команду:
+
+```console
+carol@debian:~$ ssh -R 8585:localhost:80 -Nf ina@192.168.1.77
+Enter passphrase for key '/home/carol/.ssh/id_ecdsa':
+carol@debian:~$
+```
+
+Теперь любой, кто устанавливает соединение с `halof` через порт `8585`, увидит домашнюю страницу Debian Apache2 по умолчанию:
+
+```console
+carol@debian:~$ lynx 192.168.1.77:8585
+(...)
+                                                                 Apache2 Debian Default Page: It works (p1 of 3)
+   Debian Logo Apache2 Debian Default Page
+   It works!
+
+   This is the default welcome page used to test the correct operation of the Apache2 server after
+   installation on Debian systems. If you can read this page, it means that the Apache HTTP server
+   installed at this site is working properly. You should replace this file (located at
+   /var/www/html/index.html) before continuing to operate your HTTP server.
+(...)
+```
+
+>Существует третий, более сложный тип перенаправления портов, который выходит за рамки этого урока: динамическое перенаправление портов. Вместо взаимодействия с одним портом этот тип пересылки использует различные TCP-соединения через диапазон портов.
+
+
+## Туннели X11
+
+Теперь, когда вы разбираетесь в туннелях портов, давайте завершим этот урок обсуждением туннелирования X11 (также известного как *X11forwarding*). Через туннель X11 *система X Window* на удаленном хосте перенаправляется на ваш локальный компьютер. Для этого вам просто нужно передать `ssh` параметр `-X`:
+
+```console
+carol@debian:~$ ssh -X ina@halof
+...
+```
+
+Теперь вы можете запустить графическое приложение, такое как веб-браузер `firefox`, со следующим результатом: приложение будет запущено на удаленном сервере, но его отображение будет перенаправлено на ваш локальный хост. 
+
+Если вместо этого вы начнете новый сеанс SSH с параметром `-x`, `X11forwarding` будет отключено. Попробуйте запустить `firefox` сейчас, и вы получите следующее сообщение об ошибке:
+
+```console
+carol@debian:~$ ssh -x ina@halof
+carol@192.168.0.106's password:
+(...)
+ina@halof:~$ firefox
+
+(firefox-esr:1779): Gtk-WARNING **: 18:45:45.603: Locale not supported by C library.
+	Using the fallback 'C' locale.
+Error: no DISPLAY environment variable specified
+```
+
+>Три директивы конфигурации, относящиеся к перенаправлению локального порта, перенаправлению удаленного порта и перенаправлению X11, - это `AllowTcpForwarding`, `GatewayPorts` и `X11Forwarding` соответственно. Для получения дополнительной информации введите `man ssh_config` и/или `man sshd_config`.
+
+
+## Упражнения для закрепления
+
+
+
+## Упражнения на размышление
+
+
+
+
+## Резюме
+
+
+
+
+## Ответы на упражнения для закрепления
+
+
+## Ответы на упражнения для размышления
