Update 110.3 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
@@ -390,6 +390,38 @@ Error: no DISPLAY environment variable specified
 
 ## Упражнения для закрепления
 
+1. Войдите в систему как пользователь `sonya` на своем клиентском компьютере и выполните следующие задачи SSH на удаленном сервере `halof`: 
+* Выполните команду для вывода списка содержимого `~/.ssh` от имени пользователя `serena` на удаленном хосте; затем вернитесь к своему местному терминалу. 
+* Войдите в систему как пользователь `serena` на удаленном хосте. 
+* Войдите в систему как пользователь `sonya` на удаленном хосте. 
+* Удалите все ключи, принадлежащие `halof`, из вашего локального файла `~/.ssh/known_hosts`. 
+* На вашем клиентском компьютере создайте пару ключей `ecdsa` из 256 бит. 
+* На клиентском компьютере создайте пару ключей `ed25519` из 256 бит. 
+ 
+2. Выполните следующие шаги в правильном порядке, чтобы установить SSH-соединение с помощью агента аутентификации SSH: 
+* На клиенте запустите новую оболочку Bash для агента аутентификации с помощью `ssh-agent /bin/bash`. 
+* На клиенте создайте пару ключей с помощью `ssh-keygen`. 
+* На клиенте добавьте свой закрытый ключ в безопасную область памяти с помощью `ssh-add`. 
+* Добавьте открытый ключ своего клиента в файл `~/.ssh/authorized_keys` пользователя, под которым вы хотите войти, на удаленном хосте. 
+* Если он еще не существует, создайте `~/.ssh` для пользователя, которому вы хотите войти в систему как на сервере. 
+* Подключитесь к удаленному серверу.  
+Правильный порядок: 
+| Шаг 1: |  | 
+|:-------|:-|
+| Шаг 2: |  | 
+| Шаг 3: |  |
+| Шаг 4: |  |
+| Шаг 5: |  | 
+| Шаг 6: |  |
+
+3. Что касается *переадресации портов*, какая опция и директива используются для следующих типов туннелей: 
+| Тип туннеля | Параметр | Директива |
+|:------------|:---------|:----------|
+| Местный     |          |           | 
+| Удаленный или обратный ||          | 
+| X           |          |           | 
+
+4. Предположим, вы набираете команду `ssh -L 8888: localhost: 80 -Nf ina@halof` в терминал вашего клиентского компьютера. По-прежнему на клиентской машине вы указываете браузеру `http://localhost:8888`. Что вы получите?
 
 
 ## Упражнения на размышление
