Update 110.3 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
@@ -405,7 +405,7 @@ Error: no DISPLAY environment variable specified
 * Добавьте открытый ключ своего клиента в файл `~/.ssh/authorized_keys` пользователя, под которым вы хотите войти, на удаленном хосте. 
 * Если он еще не существует, создайте `~/.ssh` для пользователя, которому вы хотите войти в систему как на сервере. 
 * Подключитесь к удаленному серверу.  
-Правильный порядок: 
+Правильный порядок:  
 | Шаг 1: |  | 
 |:-------|:-|
 | Шаг 2: |  | 
@@ -414,7 +414,7 @@ Error: no DISPLAY environment variable specified
 | Шаг 5: |  | 
 | Шаг 6: |  |
 
-3. Что касается *переадресации портов*, какая опция и директива используются для следующих типов туннелей: 
+3. Что касается *переадресации портов*, какая опция и директива используются для следующих типов туннелей:  
 | Тип туннеля | Параметр | Директива |
 |:------------|:---------|:----------|
 | Местный     |          |           | 
@@ -426,7 +426,13 @@ Error: no DISPLAY environment variable specified
 
 ## Упражнения на размышление
 
+1. Относительно директив безопасности SSH: 
+* Какая директива используется в `/etc/ssh/sshd_config` для включения входа в систему `root`: 
+* Какую директиву вы бы использовали в `/etc/ssh/sshd_config`, чтобы указать только локальную учетную запись для приема SSH-соединений: 
 
+2. При использовании одного и того же пользователя как на клиенте, так и на сервере, какую команду `ssh` вы можете использовать для передачи открытого ключа клиента на сервер, чтобы вы могли войти в систему с помощью аутентификации с открытым ключом? 
+
+3. Создайте два туннеля локальных портов с помощью одной команды, перенаправляя локальные непривилегированные порты `8080` и `8585` через `halof` удаленного сервера на веб-сайты `www.gnu.org` и `www.melpa.org` соответственно. Используйте пользователя `ina` на удаленном сервере и не забудьте использовать ключи `-Nf`:
 
 
 ## Резюме
