Update 110.3 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
@@ -406,6 +406,7 @@ Error: no DISPLAY environment variable specified
 * Если он еще не существует, создайте `~/.ssh` для пользователя, которому вы хотите войти в систему как на сервере. 
 * Подключитесь к удаленному серверу.  
 Правильный порядок:  
+
 | Шаг 1: |  | 
 |:-------|:-|
 | Шаг 2: |  | 
@@ -415,6 +416,7 @@ Error: no DISPLAY environment variable specified
 | Шаг 6: |  |
 
 3. Что касается *переадресации портов*, какая опция и директива используются для следующих типов туннелей:  
+ 
 | Тип туннеля | Параметр | Директива |
 |:------------|:---------|:----------|
 | Местный     |          |           | 
@@ -437,7 +439,28 @@ Error: no DISPLAY environment variable specified
 
 ## Резюме
 
+В этом уроке мы обсудили *OpenSSH 2*, который использует протокол *Secure Shell* для шифрования связи между сервером и клиентом. Ты выучил: 
+* как войти на удаленный сервер. 
+* как выполнять команды удаленно. 
+* как создавать пары ключей. 
+* как установить логины на основе ключей. 
+* как использовать *агент аутентификации* для дополнительной безопасности и удобства. 
+* алгоритмы с открытым ключом, поддерживаемые *OpenSSH*: `RSA`, `DSA`, `ecdsa`, `ed25519`. 
+* роль ключей хоста *OpenSSH*. 
+* как создавать туннели портов: локальные, удаленные и X. 
 
+В этом уроке обсуждались следующие команды: 
+`ssh`  
+Вход в систему или выполните команды на удаленной машине. 
+
+`ssh-keygen`  
+Создание, управление и преобразование ключей аутентификации. 
+
+`ssh-агент`  
+Агент аутентификации OpenSSH. 
+
+`ssh-add`  
+Добавляет личный ключ к агенту аутентификации.
 
 
 ## Ответы на упражнения для закрепления
