Update 110.3 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.3 Securing data with encryption/110.3 Lesson 1.md
@@ -86,7 +86,7 @@ ECDSA host key for 192.168.1.77 has changed and you have requested strict checki
 Host key verification failed.
 ```
 
-Поскольку вы не имеете дело с атакой *злоумышленник в середине*, вы можете безопасно добавить отпечаток открытого ключа нового хоста в `.ssh/known_hosts`. Как указано в сообщении, вы можете сначала использовать команду `ssh-keygen -f "/home/carol/.ssh/known_hosts" -R "192.168.1.77"`, чтобы удалить *неправильный* ключ (в качестве альтернативы вы можете использовать s`sh-keygen - R 192.168.1.77`, чтобы удалить все ключи, принадлежащие `192.168.1.77` из `~/.ssh/known_hosts`). После этого вы сможете установить соединение с новым хостом.
+Поскольку вы не имеете дело с атакой *злоумышленник в середине*, вы можете безопасно добавить отпечаток открытого ключа нового хоста в `.ssh/known_hosts`. Как указано в сообщении, вы можете сначала использовать команду `ssh-keygen -f "/home/carol/.ssh/known_hosts" -R "192.168.1.77"`, чтобы удалить *неправильный* ключ (в качестве альтернативы вы можете использовать `ssh-keygen - R 192.168.1.77`, чтобы удалить все ключи, принадлежащие `192.168.1.77` из `~/.ssh/known_hosts`). После этого вы сможете установить соединение с новым хостом.
 
 
 ## Логины на основе ключей
@@ -465,14 +465,32 @@ Error: no DISPLAY environment variable specified
 
 ## Ответы на упражнения для закрепления
 
-1. Войдите в систему как пользователь `sonya` на своем клиентском компьютере и выполните следующие задачи SSH на удаленном сервере `halof`: 
-* Выполните команду для вывода списка содержимого `~/.ssh` от имени пользователя `serena` на удаленном хосте; затем вернитесь к своему местному терминалу. 
+1. Войдите в систему как пользователь `sonya` на своем компьютере и выполните следующие задачи SSH на удаленном сервере `halof`: 
+* Выполните команду для вывода списка содержимого `~/.ssh` от имени пользователя `serena` на удаленном хосте; затем вернитесь к своему локальному терминалу. 
+```console
+ssh serena@halof cat ~/.ssh/
+```
 * Войдите в систему как пользователь `serena` на удаленном хосте. 
+```console
+ssh serena@halof
+```
 * Войдите в систему как пользователь `sonya` на удаленном хосте. 
+```console
+ssh sonya@halof
+```
 * Удалите все ключи, принадлежащие `halof`, из вашего локального файла `~/.ssh/known_hosts`. 
+```console
+ssh-keygen - R halof
+```
 * На вашем клиентском компьютере создайте пару ключей `ecdsa` из 256 бит. 
+```console
+
+```
 * На клиентском компьютере создайте пару ключей `ed25519` из 256 бит. 
- 
+```console
+
+```
+
 2. Выполните следующие шаги в правильном порядке, чтобы установить SSH-соединение с помощью агента аутентификации SSH: 
 * На клиенте запустите новую оболочку Bash для агента аутентификации с помощью `ssh-agent /bin/bash`. 
 * На клиенте создайте пару ключей с помощью `ssh-keygen`. 
